src/main/java/com/example/updatemebook/errors/DataNotFoundException.java
package com.example.updatemebook.errors;

public class DataNotFoundException extends RuntimeException {
    public DataNotFoundException(String message) {
        super(message);
    }
}
